# Ej-OPEN

./: README.md  env.example.txt
chatbot-rag/: .gitignore  pyproject.toml  requirements.txt
chatbot-rag/app/: config.py  main.py  prospects_db.py  rag.py  schemas.py
chatbot-rag/app/db/: sqlite_store.py  vectorstore.py
chatbot-rag/app/services/: hybrid_index.py  intent.py  loaders.py  mailer.py  watcher.py
chatbot-rag/app/static/: index.html
chatbot-rag/data/: prospects.db  vectors.db
